--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: docker
     plan: free
     autoDeploy: true
-    healthCheckPath: /
+    healthCheckPath: /health
     envVars:
       - key: SECRET_KEY
         generateValue: true
