Fix Render deployment: add explicit dockerfilePath and .dockerignore

--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
     plan: free
     autoDeploy: true
     healthCheckPath: /health
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: SECRET_KEY
         generateValue: true
